Changed Migrations and Models
Add Migrations, changed README and created Models

--- a/sati_django/templates/sati_utfpr/index.html
+++ b/sati_django/templates/sati_utfpr/index.html
@@ -46,7 +46,7 @@
           <!-- Navigation -->
           <div class="android-navigation-container">
             <nav class="android-navigation mdl-navigation">
-              <a class="mdl-navigation__link mdl-typography--text-uppercase" href="">Menu 1</a>
+              <a class="mdl-navigation__link mdl-typography--text-uppercase" href="login.html">Menu 1</a>
               <a class="mdl-navigation__link mdl-typography--text-uppercase" href="">Menu 2</a>
               <a class="mdl-navigation__link mdl-typography--text-uppercase" href="">Menu 3</a>
 {#              <a class="mdl-navigation__link mdl-typography--text-uppercase" href="">TV</a>#}
