--- a/sati_django/satiUTFPR/static/styles.css
+++ b/sati_django/satiUTFPR/static/styles.css
@@ -22,6 +22,11 @@ body {
 a img{
   border: 0px;
 }
+.mdl-card{
+  -webkit-tap-highlight-color: transparent;
+  -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
+  margin-top: 20px;
+}
 
 ::-moz-selection {
   background-color: #6ab344;
@@ -503,6 +508,7 @@ a img{
   }
 
   .android-be-together-section {
+    margin-top: 20px;
     height: 350px;
   }
 
