--- a/sati_django/templates/sati_utfpr/test.html
+++ b/sati_django/templates/sati_utfpr/test.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% extends 'sati_utfpr/base.html' %}
+
+{% block content %}
+    <h1>TESTE TESTE TESTE</h1>
+
+{% endblock %}
