Changed to Django 1.10 [2]
Changed settings and urlpatterns to new syntax

--- a/sati_django/templates/sati_utfpr/base.html
+++ b/sati_django/templates/sati_utfpr/base.html
@@ -30,11 +30,11 @@
 
 <body>
 <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
-
+    {% load static %}
     <div class="android-header mdl-layout__header mdl-layout__header--waterfall">
         <div class="mdl-layout__header-row">
           <span class="android-title mdl-layout-title">
-            <img class="android-logo-image" src="{{ STATIC_URL }}images/android-logo.png">
+            <img class="android-logo-image" src="{% static "images/android-logo.png" %}">
           </span>
             <!-- Add spacer, to align navigation to the right in desktop -->
             <div class="android-header-spacer mdl-layout-spacer"></div>
@@ -55,7 +55,7 @@
                 </nav>
             </div>
             <span class="android-mobile-title mdl-layout-title">
-            <img class="android-logo-image" src="{{ STATIC_URL }}images/android-logo.png">
+            <img class="android-logo-image" src="{% static "images/android-logo.png" %}">
           </span>
             <button class="android-more-button mdl-button mdl-js-button mdl-button--icon mdl-js-ripple-effect"
                     id="more-button">
@@ -72,7 +72,7 @@
 
     <div class="android-drawer mdl-layout__drawer">
         <span class="mdl-layout-title">
-          <img class="android-logo-image" src="{{ STATIC_URL }}images/android-logo-white.png">
+          <img class="android-logo-image" src="{% static "images/android-logo-white.png" %}">
         </span>
         <nav class="mdl-navigation">
             <a class="mdl-navigation__link" href="">Menu 1</a>
