--- a/sati_django/templates/sati_utfpr/index.html
+++ b/sati_django/templates/sati_utfpr/index.html
@@ -5,7 +5,7 @@
     <p>SATI</p>
 
 
-    {% include "./css.html" %}
-    {% include "./javascript.html" %}
+    {% include "../css.html" %}
+    {% include "../javascript.html" %}
 
 {% endblock %}
