--- a/sati_django/templates/css.html
+++ b/sati_django/templates/css.html
@@ -1,7 +1,10 @@
+{% load static %}
+
+<!-- Google Fonts -->
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
 
 <!-- Angular -->
 
-{% load static %}
 
 <link rel="stylesheet" href="{% static "node_modules/angular-material/angular-material.css" %}" />
 
