--- a/sati_django/templates/sati_utfpr/base.html
+++ b/sati_django/templates/sati_utfpr/base.html
@@ -98,10 +98,7 @@
     </div>
 
 
-     {% block content %}
-
-
-        {% endblock %}
+     {% block content %}{% endblock %}
 {#    <div class="android-content mdl-layout__content">#}
 {##}
 {##}
