--- a/sati_django/dashboard/templates/dashboard/index.html
+++ b/sati_django/dashboard/templates/dashboard/index.html
@@ -2,7 +2,11 @@
 
 {% block content %}
 
-    <p>Dashboard</p>
+    <div class="mdl-color--white mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-grid">
+
+        <p>Dashboard</p>
+
+    </div>
 
 
 {% endblock %}
