--- a/sati_django/templates/css.html
+++ b/sati_django/templates/css.html
@@ -1,14 +1,16 @@
 {% load static %}
 
+<link rel="stylesheet" href="{% static "/css-main/style-base.css" %}"/>
+
 <!-- Google Fonts -->
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en" />
 
 <!-- Angular -->
 
 
-<link rel="stylesheet" href="{% static "node_modules/angular-material/angular-material.css" %}" />
+<link rel="stylesheet" href="{% static "/node_modules/angular-material/angular-material.css" %}" />
 
 <!-- MDL -->
 
 <link rel="stylesheet" href="{% static "/node_modules/mdl/material.min.css" %}" />
-<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
