--- a/sati_django/dashboard/templates/dashboard/index.html
+++ b/sati_django/dashboard/templates/dashboard/index.html
@@ -1,6 +1,8 @@
 {% extends 'dashboard/base.html' %}
 
-{% block content %}
+{% block title %} Dashboard {% endblock %}
+
+{% block body_content %}
 
     <div class="mdl-color--white mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-grid">
 
