--- a/sati_django/public/templates/public/base.html
+++ b/sati_django/public/templates/public/base.html
@@ -61,8 +61,8 @@
           <!-- Navigation -->
           <div class="android-navigation-container">
             <nav class="android-navigation mdl-navigation">
-              <a class="mdl-navigation__link mdl-typography--text-uppercase" href="">Phones</a>
-              <a class="mdl-navigation__link mdl-typography--text-uppercase" href="">Tablets</a>
+              <a class="mdl-navigation__link mdl-typography--text-uppercase" href="/login">Entrar</a>
+              <a class="mdl-navigation__link mdl-typography--text-uppercase" href="/signup">Cadastre-se</a>
               <a class="mdl-navigation__link mdl-typography--text-uppercase" href="">Wear</a>
               <a class="mdl-navigation__link mdl-typography--text-uppercase" href="">TV</a>
               <a class="mdl-navigation__link mdl-typography--text-uppercase" href="">Auto</a>
@@ -117,7 +117,6 @@
       </div>
 
       <div class="android-content mdl-layout__content">
-
           {% block content %}{% endblock %}
 
         <footer class="android-footer mdl-mega-footer">
