--- a/sati_django/templates/css.html
+++ b/sati_django/templates/css.html
@@ -3,6 +3,7 @@
 <link rel="stylesheet" href="{% static "/css-main/style-base.css" %}"/>
 
 <!-- Google Fonts -->
+<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en" />
 
 <!-- Angular -->
