--- a/sati_django/templates/public_style.html
+++ b/sati_django/templates/public_style.html
@@ -24,12 +24,11 @@
         height: 400px;
     }
 
-    <!-- Tem que arrumar a capa -->
     .sati-capa {
         position: relative;
-        background: url('{% static 'images/sati/capa-evento.jpg' %}') center top no-repeat;
+        background: url('{% static 'images/sati/capa-evento.png' %}') center top no-repeat;
         background-size: cover;
-        height: 750px;
+        height: 865px;
     }
 
 </style>
