--- a/sati_django/dashboard/static/css/style.css
+++ b/sati_django/dashboard/static/css/style.css
@@ -1,16 +1,15 @@
 .dashboard-drawer__top {
     clear: both;
+
 }
 
 .dashboard-drawer__top-greet {
-    min-height: 35px;
+    min-height: 45px;
     color: #868686;
-    line-height: 35px;
+    line-height: 45px;
     text-align: center;
-    font-weight: 300;
-    font-size: 20px;
-    text-transform: uppercase;
     margin-top: 10px;
+    margin-bottom: 5px;
 }
 
 .dashboard-drawer__top-avatar {
@@ -58,20 +57,110 @@
     box-sizing: border-box;
 }
 
+.ml-header {
+    min-height: 180px;
+}
+
+.p-20 {
+    padding: 20px;
+}
+
+.m-t-20 {
+    margin-top: 20px;
+}
+.m-b-5 {
+    margin-bottom: 5px;
+}
+
+.w100 {
+    font-weight: 100;
+}
+.no-m-t {
+    margin-top: 0;
+}
+.m-b-20 {
+    margin-bottom: 20px;
+}
+
+.rel, .relative {
+    position: relative !important;
+}
+
+.page-subtitle {
+    font-size: 23px;
+}
+
+.page-description {
+    font-size: 17px;
+}
+
+
+.mdl-grid.mdl-grid--no-spacing {
+    padding: 0;
+}
+
+.ml-card-holder.ml-card-holder-first {
+    margin-top: -81px;
+}
+
+.mdl-grid.mdl-grid--no-spacing > .mdl-cell {
+    margin: 0;
+}
+
+.mdl-grid {
+    display: flex;
+    flex-flow: row wrap;
+    margin: 0 auto;
+    align-items: stretch;
+}
 /*
     adjusted height = <user-chosen width> * original height / original width
     adjusted width = <user-chosen height> * original width / original height
 
     width= 1153
-    height = 474
+    height = 474  851x500c
 */
 
 .dashboard-logo-top {
     width: 100px;
     height: 42px;
-    border-radius: 24px;
     vertical-align: middle;
 }
+
+.content-description {
+    padding-right: 20px;
+    padding: 40px;
+}
+
+.page {
+    bottom: 0;
+    position: absolute;
+    top: 0;
+    width: calc(100% - 240px);
+    margin-left: 240px;
+    margin-top: 64px;
+}
+
+.search-filter-header {
+    margin-top: -60px;
+    position: relative;
+}
+
+.search-filter-title {
+    align-self: center;
+    text-align: center;
+    position: relative;
+}
+
+.tabsdemoDynamicHeight md-content {
+  background-color: transparent !important; }
+  .tabsdemoDynamicHeight md-content md-tabs {
+    background: #f6f6f6;
+    border: 1px solid #e1e1e1; }
+    .tabsdemoDynamicHeight md-content md-tabs md-tabs-wrapper {
+      background: white; }
+  .tabsdemoDynamicHeight md-content h1:first-child {
+    margin-top: 0; }
 
 /*  Not modified */
 
