--- a/sati_django/templates/javascript.html
+++ b/sati_django/templates/javascript.html
@@ -7,7 +7,9 @@
 <script type="text/javascript" src="{% static "node_modules/angular-aria/angular-aria.js" %}"></script>
 <script type="text/javascript" src="{% static "node_modules/angular-animate/angular-animate.js" %}"></script>
 <script type="text/javascript" src="{% static "node_modules/angular-material/angular-material.js" %}"></script>
-
+<script type="text/javascript" src="{% static "node_modules/angular-messages/angular-messages.js" %}"></script>
+<script type="text/javascript" src="{% static "node_modules/angular-route/angular-route.js" %}"></script>
+<script src="http://ngmaterial.assets.s3.amazonaws.com/svg-assets-cache.js"></script>
 
 <!-- MDL -->
 
