--- a/sati_django/dashboard/templates/dashboard/base.html
+++ b/sati_django/dashboard/templates/dashboard/base.html
@@ -33,6 +33,7 @@
         <!-- Dashboard files -->
 
         <script type="text/javascript" src="{% static "/js/crud/crud_app.js" %}"></script>
+        <script type="text/javascript" src="{% static "/js/crud/crud_edition_controller.js" %}"></script>
 
         <link rel="stylesheet" href="{% static "/css/style.css" %}" />
 
