--- a/sati_django/dashboard/templates/dashboard/base_crud.html
+++ b/sati_django/dashboard/templates/dashboard/base_crud.html
@@ -29,30 +29,25 @@
 
             <div class="mdl-cell mdl-cell--9-col mdl-cell--12-col-tablet mdl-cell--12-col-phone mdl-grid">
 
+                <div ng-controller="AppCtrl" layout="column" ng-cloak>
+                    <md-toolbar class="search-filter-header">
+                        <div class="md-toolbar-tools">
+                            <h2 class="display-3 search-filter-title md-flex">Filtro de Pesquisa</h2>
+                        </div>
+                    </md-toolbar>
 
-
-                <!-- Filter form -->
-                <div class="mdl-color--white mdl-shadow--3dp mdl-cell mdl-cell--12-col mdl-grid ">
-
-                    <header class="mdl-cell--12-col mdl-grid mdl-layout__header mdl-color--blue-200 mdl-color-text--grey-600 search-filter-header">
-                        <h4 class="display-3 search-filter-title">Filtro de Pesquisa</h4>
-                    </header>
-
-
-                    <div class="mdl-cell--12-col mdl-grid">
+                    <md-content flex layout-padding>
 
                         {% block search_filter %} {% endblock %}
 
-                    </div>
-
+                        <p>Lorem ipsum dolor sit amet, ne quod novum mei. Sea omnium invenire mediocrem at,
+                            in lobortis conclusionemque nam. Ne deleniti appetere reprimique pro, inani labitur disputationi te sed. At vix sale omnesque, id pro labitur reformidans accommodare, cum labores honestatis eu. Nec quem lucilius in, eam praesent reformidans no. Sed laudem aliquam ne.</p>
+                    </md-content>
                 </div>
 
 
+
                 <div class="m mdl-cell--12-col mdl-grid  ">
-
-
-
-
 
                 </div>
             </div>
