--- a/sati_django/public/templates/public/signup.html
+++ b/sati_django/public/templates/public/signup.html
@@ -7,7 +7,7 @@
 
         <div class="mdl-grid">
             <div class="mdl-layout-spacer "></div>
-            <form action="" method="POST">
+            <form action="{% url 'user_signup' %}" method="POST">
                 {% csrf_token %}
                 <div class="mdl-grid">
                     <div class="mdl-layout-spacer "></div>
@@ -55,14 +55,14 @@
                     <div class="mdl-layout-spacer "></div>
                     <div class="mdl-cell mdl-cell--4-col">
                         <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-                            <input class="mdl-textfield__input" type="password" id="senha" name="senha" value="{{ senha }}">
+                            <input class="mdl-textfield__input" type="text" id="senha" name="senha" value="{{ senha }}">
                             <label class="mdl-textfield__label" for="senha">Senha</label>
                         </div>
                     </div>
 
                     <div class="mdl-cell mdl-cell--4-col ">
                         <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-                            <input class="mdl-textfield__input" type="password" id="confirmar_senha" name="confirmar_senha"
+                            <input class="mdl-textfield__input" type="text" id="confirmar_senha" name="confirmar_senha"
                                    value="{{ confirmar_senha }}">
                             <label class="mdl-textfield__label" for="confirmar_senha">Confirmar Senha</label>
                         </div>
