--- a/sati_django/apps/public/static/css/public/style.css
+++ b/sati_django/apps/public/static/css/public/style.css
@@ -1,3 +1,22 @@
+.index-headline {
+  text-align: center;
+}
+
+.index-headline-text {
+  max-width: 500px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 80px 16px 0 16px;
+}
+
+.index-headline-text p {
+  padding-top: 16px;
+}
+
+
+
+/* Do not modify below */
+
 /**
  * Copyright 2015 Google Inc. All Rights Reserved.
  *
