--- a/sati_django/apps/public/templates/public/index.html
+++ b/sati_django/apps/public/templates/public/index.html
@@ -4,23 +4,18 @@
 
 {% block content %}
 
-    <a name="top"></a>
-
-    <div class="sati-capa">
-        <div class="android-wear-band">
-            <div class="android-wear-band-text">
-                <div class="mdl-typography--display-2 mdl-typography--font-thin">The best of Google built in</div>
-                <p class="mdl-typography--headline mdl-typography--font-thin">
-                    Android works perfectly with your favourite apps like Google Maps, Calendar and YouTube.
-                </p>
-                <p>
-                    <a class="mdl-typography--font-regular mdl-typography--text-uppercase android-alt-link" href="">
-                        See what's new in the Play Store&nbsp;<i class="material-icons">chevron_right</i>
-                    </a>
-                </p>
-            </div>
+    <div class="index-headline mdl-cell--12-col">
+        <div class="index-headline-image"></div>
+        <div class="index-headline-text">
+            <div class="mdl-typography--font-light mdl-typography--display-1-color-contrast">Customised by you, for you</div>
+            <p class="mdl-typography--font-light">
+                Put the stuff that you care about right on your home screen: the latest news, the weather or a stream of your recent photos.
+                <br />
+                <a href="" class="android-link mdl-typography--font-light">Customise your phone</a>
+            </p>
         </div>
     </div>
+
 
     <div class="android-be-together-section mdl-typography--text-center">
 
@@ -101,7 +96,8 @@
           </div>
           <div class="android-customized-section-image"></div>
         </div>
-        <div class="android-more-section">
+
+    <div class="android-more-section">
           <div class="android-section-title mdl-typography--display-1-color-contrast">More from Android</div>
           <div class="android-card-container mdl-grid">
             <div class="mdl-cell mdl-cell--3-col mdl-cell--4-col-tablet mdl-cell--4-col-phone mdl-card mdl-shadow--3dp">
