--- a/sati_django/src/templates/css.html
+++ b/sati_django/src/templates/css.html
@@ -15,3 +15,36 @@
 
 <link rel="stylesheet" href="{% static "/node_modules/mdl/material.min.css" %}" />
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
+
+<style>
+
+    .android-be-together-section {
+        position: relative;
+        height: 800px;
+        width: auto;
+        background-color: #f3f3f3;
+        background: url('{% static "images/android/slide01.jpg" %}') center 30% no-repeat;
+        background-size: cover;
+    }
+
+    .android-wear-section {
+        position: relative;
+        background: url('{% static "images/android/wear.png" %}') center top no-repeat;
+        background-size: cover;
+        height: 800px;
+    }
+
+    .android-customized-section-image {
+        background: url('{% static 'images/android/devices.jpg' %}') center top no-repeat;
+        background-size: cover;
+        height: 400px;
+    }
+
+    .sati-capa {
+        position: relative;
+        background: url('{% static 'images/sati/capa-evento.png' %}') center top no-repeat;
+        background-size: cover;
+        height: 865px;
+    }
+
+</style>
