--- a/sati_django/src/templates/javascript.html
+++ b/sati_django/src/templates/javascript.html
@@ -13,7 +13,10 @@
 <script src="http://ngmaterial.assets.s3.amazonaws.com/svg-assets-cache.js"></script>
 
 <script src="{% static "/js/sati_app.js" %}"></script>
-<script src="{% static "/js/sati_factory.js" %}"></script>
+
+<!-- CRUD -->
+<script src="{% static "/js/factory/crud_factory.js" %}"></script>
+<script src="{% static "/js/factory/crud_urls_factory.js" %}"></script>
 
 <!-- Public -->
 <script src="{% static "/js/public/event/event_controller.js" %}"></script>
