--- a/sati_django/apps/public/templates/public/css.html
+++ b/sati_django/apps/public/templates/public/css.html
@@ -14,4 +14,19 @@
         background-size: cover;
         height: 622px;
     }
+
+
+    .headline-image {
+        width: auto;
+        height: 250px;
+        background-size: cover;
+        position: relative;
+        overflow: hidden;
+    }
+
+    .headline-image-event {
+        background: url('{% static '/images/event/event-headline-2.jpg' %}') center center no-repeat;
+    }
+
+
 </style>
