--- a/sati_django/src/templates/javascript.html
+++ b/sati_django/src/templates/javascript.html
@@ -5,11 +5,13 @@
 
 
 <script type="text/javascript" src="{% static "node_modules/angular/angular.js" %}"></script>
+<script type="text/javascript" src="{% static "node_modules/angular/angular-locale_pt-br.js" %}"></script>
 <script type="text/javascript" src="{% static "node_modules/angular-aria/angular-aria.js" %}"></script>
 <script type="text/javascript" src="{% static "node_modules/angular-animate/angular-animate.js" %}"></script>
 <script type="text/javascript" src="{% static "node_modules/angular-material/angular-material.js" %}"></script>
 <script type="text/javascript" src="{% static "node_modules/angular-messages/angular-messages.js" %}"></script>
 <script type="text/javascript" src="{% static "node_modules/angular-route/angular-route.js" %}"></script>
+<script type="text/javascript" src="{% static "node_modules/angular-sanitize/angular-sanitize.js" %}"></script>
 <script src="http://ngmaterial.assets.s3.amazonaws.com/svg-assets-cache.js"></script>
 
 <script src="{% static "/js/sati_app.js" %}"></script>
@@ -20,6 +22,7 @@
 
 <!-- Public -->
 <script src="{% static "/js/public/event/event_controller.js" %}"></script>
+<script src="{% static "/js/public/event/event_directive.js" %}"></script>
 
 <!-- MDL -->
 
