--- a/sati_django/apps/public/static/css/public/style.css
+++ b/sati_django/apps/public/static/css/public/style.css
@@ -1,3 +1,21 @@
+.logo-image {
+  height: 49px;
+  width: 120px;
+}
+
+.logo-image-mobile {
+  height: 41px;
+  width: 100px;
+}
+
+/*
+    adjusted height = <user-chosen width> * original height / original width
+    adjusted width = <user-chosen height> * original width / original height
+
+    width= 1153
+    height = 474  851x500c
+*/
+
 /* cards */
 
 .mdl-card__media {
@@ -44,6 +62,14 @@
    max-height: 32px;      /* fallback */
    -webkit-line-clamp: 2; /* number of lines to show */
    -webkit-box-orient: vertical;
+}
+
+.mdl-card--event-detail {
+
+}
+
+.mdl-card__supporting-text-tag {
+    margin: 0;
 }
 
 /* - Headline - */
@@ -164,10 +190,7 @@ a img{
 }
 
 
-.android-logo-image {
-  height: 28px;
-  width: 140px;
-}
+
 
 
 .android-header {
