--- a/sati_django/apps/public/templates/public/base.html
+++ b/sati_django/apps/public/templates/public/base.html
@@ -40,9 +40,9 @@
 
         <div class="android-header mdl-layout__header mdl-layout__header--waterfall mdl-color--grey-300">
             <div class="mdl-layout__header-row">
-                <span class="android-title mdl-layout-title">
-                    <img class="android-logo-image" src="{% static "images/android/android-logo.png" %}">
-                </span>
+                <a class="android-title mdl-layout-title" href="/">
+                    <img class="logo-image" src="{% static "images/sati/logo.png" %}">
+                </a>
                 <!-- Add spacer, to align navigation to the right in desktop -->
                 <div class="android-header-spacer mdl-layout-spacer"></div>
 
@@ -67,9 +67,9 @@
               <a class="mdl-navigation__link mdl-typography--text-uppercase" href="">Play</a>
             </nav>
           </div>
-          <span class="android-mobile-title mdl-layout-title">
-            <img class="android-logo-image" src="{% static "images/android/android-logo.png" %}">
-          </span>
+          <a class="android-mobile-title mdl-layout-title" href="/">
+              <img class="logo-image-mobile" src="{% static "images/sati/logo.png" %}">
+          </a>
           <button class="android-more-button mdl-button mdl-js-button mdl-button--icon mdl-js-ripple-effect" id="more-button">
             <i class="material-icons">more_vert</i>
           </button>
