--- a/sati_django/apps/public/templates/public/login.html
+++ b/sati_django/apps/public/templates/public/login.html
@@ -18,7 +18,7 @@
                                 <label class="mdl-textfield__label" for="username">Username</label>
                             </div>
                             <div class="mdl-textfield mdl-js-textfield">
-                                <input class="mdl-textfield__input" type="text" id="userpass" name="userpass" value="{{ userpass }}"/>
+                                <input class="mdl-textfield__input" type="password" id="userpass" name="userpass" value="{{ userpass }}"/>
                                 <label class="mdl-textfield__label" for="userpass">Password</label>
                             </div>
                             <div class="mdl-card__actions mdl-card--border">
