--- a/sati_django/apps/dashboard/templates/dashboard/base.html
+++ b/sati_django/apps/dashboard/templates/dashboard/base.html
@@ -97,39 +97,37 @@
                         </div>
 
                         <div class="dashboard-drawer__top-info">
-                            <h4 class="mdl-color-text--white dashboard-drawer__info-h4 no-m-b "> Nome</h4>
+                            <h4 class="mdl-color-text--white dashboard-drawer__info-h4 no-m-b "> {{ request.user.first_name }}</h4>
                             <div class="mdl-color-text--blue-grey-400 f12 no-m-t"><i class="material-icons f12">place</i> Ponta Grossa, PR</div>
                         </div>
                     </div>
 
 
-                    <div class="dashboard-avatar-dropdown">
-                        <span>hello@example.com</span>
-                        <div class="mdl-layout-spacer"></div>
-
-                        <button id="accbtn" class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--icon">
-                            <i class="material-icons" role="presentation">arrow_drop_down</i>
-                            <span class="visuallyhidden">Accounts</span>
-                        </button>
-                        <ul class="mdl-menu mdl-menu--bottom-right mdl-js-menu mdl-js-ripple-effect" for="accbtn">
-                            <li class="mdl-menu__item">hello@example.com</li>
-                            <li class="mdl-menu__item">info@example.com</li>
-                            <li class="mdl-menu__item"><i class="material-icons">add</i>Add another account...</li>
-                        </ul>
-                    </div>
+{#                    <div class="dashboard-avatar-dropdown">#}
+{#                        <span></span>#}
+{#                        <div class="mdl-layout-spacer"></div>#}
+{##}
+{#                        <button id="accbtn" class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--icon">#}
+{#                            <i class="material-icons" role="presentation">arrow_drop_down</i>#}
+{#                            <span class="visuallyhidden">Accounts</span>#}
+{#                        </button>#}
+{#                        <ul class="mdl-menu mdl-menu--bottom-right mdl-js-menu mdl-js-ripple-effect" for="accbtn">#}
+{#                            <li class="mdl-menu__item" selected="selected">hello@example.com</li>#}
+{#                            <li class="mdl-menu__item">info@example.com</li>#}
+{#                            <li class="mdl-menu__item"><i class="material-icons">add</i>Add another account...</li>#}
+{#                        </ul>#}
+{#                    </div>#}
 
                 </header>
 
                 <nav class="dashboard-navigation mdl-navigation mdl-color--blue-grey-800">
+
                     <a class="mdl-navigation__link" href="/dashboard/"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">dashboard</i>Home</a>
+                    {% if request.user.is_staff %}
                     <a class="mdl-navigation__link" href="/dashboard/edition"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">bookmark</i>Edição</a>
+                    {% endif %}
                     <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">event</i>Evento</a>
-                    <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">report</i>Spam</a>
-                    <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">forum</i>Forums</a>
-                    <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">flag</i>Updates</a>
-                    <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">local_offer</i>Promos</a>
-                    <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">shopping_cart</i>Purchases</a>
-                    <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">people</i>Social</a>
+                    <a class="mdl-navigation__link" href="/dashboard/logout"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">exit_to_app</i>Logout</a>
                     <div class="mdl-layout-spacer"></div>
                     <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">help_outline</i><span class="visuallyhidden">Help</span></a>
                 </nav>
