--- a/sati_django/src/templates/javascript.html
+++ b/sati_django/src/templates/javascript.html
@@ -17,6 +17,7 @@
 
 <script src="{% static "/js/sati_app.js" %}"></script>
 <script src="{% static "/js/sati_factory.js" %}"></script>
+<script src="{% static "/js/sati_directive.js" %}"></script>
 
 <!-- CRUD -->
 <script src="{% static "/js/factory/crud_factory.js" %}"></script>
