Final Event List Page

--- a/sati_django/apps/public/templates/public/base.html
+++ b/sati_django/apps/public/templates/public/base.html
@@ -110,7 +110,7 @@
         </nav>
       </div>
 
-      <div class="android-content mdl-grid--no-spacing">
+      <div class="android-content mdl-layout__content mdl-grid--no-spacing">
 
           {% block content %}{% endblock %}
 
