--- a/sati_django/src/static/templates/sati/warn-message.html
+++ b/sati_django/src/static/templates/sati/warn-message.html
@@ -1,7 +1,7 @@
 <div class="mdl-layout-spacer"></div>
-<md-toolbar class="md-warn mdl-cell mdl-cell--6-col" >
-    <div class="md-toolbar-tools mdl-cell mdl-cell--12-col">
-        <h2 class="mdl-typography--text-capitalize">nesse cara</h2>
+<md-toolbar class="mdl-color--red-A700 mdl-cell mdl-cell--8-col mdl-shadow--3dp" >
+    <div class="mdl-cell mdl-cell--12-col mdl-typography--text-center">
+        <h2 class="mdl-typography--headline" ng-bind="warnMessage"> </h2>
     </div>
 </md-toolbar>
 <div class="mdl-layout-spacer"></div>
