--- a/sati_django/apps/public/templates/event/index.html
+++ b/sati_django/apps/public/templates/event/index.html
@@ -13,13 +13,11 @@
         </div>
     </div>
 
-
-
     <div class="content-grid mdl-grid max-w-1280" ng-controller="EventCtrl as eventCtrl">
 
         <md-toolbar class="md-primary mdl-cell mdl-cell--12-col  mdl-grid m-w-720" >
             <div class="md-toolbar-tools">
-                <h2 class="md-flex" ng-bind=" eventCtrl.Label.filter_label_filter_event()"></h2>
+                <h2 class="md-flex" ng-bind=" eventCtrl.EventLabel.filter_label_filter_event()"></h2>
             </div>
         </md-toolbar>
 
@@ -27,12 +25,12 @@
                             mdl-grid
                             filter-content">
             <md-input-container class="mdl-cell mdl-cell--6col mdl-cell--4-col-tablet mdl-cell--4-col-phone">
-                <label ng-bind="eventCtrl.Label.filter_label_event_name()"></label>
+                <label ng-bind="eventCtrl.EventLabel.filter_label_event_name()"></label>
                 <input ng-model="search.name">
             </md-input-container>
 
             <md-input-container class="mdl-cell mdl-cell--6-col mdl-cell--4-col-tablet mdl-cell--4-col-phone">
-                <label ng-bind="eventCtrl.Label.filter_label_event_begin_date()"></label>
+                <label ng-bind="eventCtrl.EventLabel.filter_label_event_begin_date()"></label>
                 <md-datepicker ng-model="filter.begin_date" md-open-on-focus></md-datepicker>
             </md-input-container>
         </div>
